feature: admin manage users and documentation [Finishes #000001]
