# routes/api.php
@@ -1,10 +1,11 @@
 <?php
 
-use Illuminate\Http\Request;
-use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\Api\Admin\ManageUserController;
+use App\Http\Controllers\Api\Appointment\AppointmentController;
 use App\Http\Controllers\Api\Auth\AuthController;
 use App\Http\Controllers\Api\Shop\ShopController;
-use App\Http\Controllers\Api\Appointment\AppointmentController;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Route;
 
 /*
 |--------------------------------------------------------------------------
@@ -38,11 +39,19 @@ Route::prefix('v1')->group(function () {
         Route::get('appointment-history', [AppointmentController::class, 'getAppointmentHistory']);
         // get a single user appointment history
         Route::get('appointment-user-history/{id}', [AppointmentController::class, 'getAppointmentHistoryByUserId']);
+    });
+
+    // route with admin middleware
+    Route::middleware(['auth:sanctum', 'admin'])->group(function () {
+        // update user status
+        Route::put('user/{id}', [ManageUserController::class, 'updateUserStatus']);
+        // get all user
+        Route::get('users', [ManageUserController::class, 'getAllUsers']);
+
+        Route::apiResource('manage-shops', ManageShopController::class);
+        Route::put('update-shop-status/{shop}', [ManageShopController::class, 'updateShopStatus']);
+    });
 });
-
-});
-
-
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
